(lang dune 3.19)

(name goto_lookup)

(generate_opam_files true)

(source (github MyLittlePenguin/goto_lookup))

(license MIT)

(package
  (name goto_lookup)
  (synopsis "a commandline tool to look up known places for navigation")
  (description "a commandline tool to look up known places for navigation")
  (depends ocaml)
  )
